<resources>
    <string name="app_name">RAKVideoTest</string>
    <string name="action_settings">Settings</string>
    <string name="main_help">帮助</string>
    <string name="main_scan_indicator_title">正在搜索</string>
    <string name="main_scan_indicator">正在搜索RAK设备...</string>
    <string name="add_device_step0_title">添加向导</string>
    <string name="add_device_step0_local_title">本地RAK设备</string>
    <string name="add_device_step0_local_text">配置本地RAK设备连接到手机所连接的网络</string>
    <string name="add_device_step0_remote_title">远程RAK设备</string>
    <string name="add_device_step0_remote_text">通过RAK设备远程ID连接实现远程实时观看</string>
    <string name="add_device_step01_title">添加本地RAK设备</string>
    <string name="add_device_step01_easy_title">一键配置添加</string>
    <string name="add_device_step01_easy_text">通过一键配置方式配置本地RAK设备连接到手机所连接的网络</string>
    <string name="add_device_step01_ap_title">AP配置添加</string>
    <string name="add_device_step01_ap_text">通过AP配置方式配置本地RAK设备连接到路由器</string>
    <string name="add_device_step1_ap_title">AP配置</string>
    <string name="add_device_step1_ap_text">AP配置添加RAK设备</string>
    <string name="add_device_step1_ap_note">1、长按设“Easyconfig”按键5秒钟，恢复出厂\n2、打开手机WLAN加入RAK设备建立的热点\n3、返回该界面，点击\"下一步\"连接RAK设备</string>
    <string name="add_device_step1_ap_btn">下一步</string>
    <string name="add_device_step1_ap_admin_title">可加入的RAK设备</string>
    <string name="add_device_step1_ap_admin_failed">未搜索到可加入的RAK设备</string>
    <string name="add_device_step1_ap_wifi_failed">请先开启WLAN连接</string>
    <string name="add_device_step1_ap_admin_connect_title">连接RAK设备</string>
    <string name="add_device_step1_ap_admin_connect_note">正在连接RAK设备...</string>
    <string name="add_device_step1_ap_admin_connect_fail">未连接上RAK设备，再试一次</string>
    <string name="add_device_step1_ap_admin_connect_text">正在加入</string>
    <string name="add_device_step1_ap_admin_connect_ok">恭喜，连接RAK设备成功</string>
    <string name="add_device_step1_ap_admin_connect_failed">啊哦，连接RAK设备失败，重新试试</string>
    <string name="add_device_step2_ap_note">1、点击下拉图标选择要配置的网络\n2、填写已选择Wi-Fi网络的密码\n3、点击\"下一步\"配置设备连接到该网络</string>
    <string name="add_device_step2_ap_scan_title">获取无线网络</string>
    <string name="add_device_step2_ap_scan_text">正在获取模块扫描到的无线网络...</string>
    <string name="add_device_step2_ap_scan_failed">获取模块扫描到的无线网络超时</string>
    <string name="add_device_step3_ap_note">1、打开手机"设置--无线局域网络"\n2、手机加入刚才配置的无线网络\n3、点击\"下一步\"搜索刚才配置的RAK设备</string>
    <string name="add_device_step3_ap_error">手机未加入刚才配置的网络</string>
    <string name="add_device_remote_title">添加远程RAK设备</string>
    <string name="add_device_remote_text">添加远程RAK设备</string>
    <string name="add_device_remote_note">1、输入RAK设备的远程ID\n2、点击完成按钮添加远程RAK设备</string>
    <string name="add_device_remote_id_hint">请输入RAK设备远程ID</string>
    <string name="add_device_remote_name_hint">请输入RAK设备名称</string>
    <string name="add_device_remote_id_error">亲，RAK设备ID不能为空哟</string>
    <string name="add_device_remote_name_error">亲，RAK设备名称不能为空哟</string>
    <string name="add_device_remote_success">恭喜！您已成功添加RAK设备，赶紧去体验吧</string>
    <string name="add_device_remote">完成</string>
    <string name="add_device_step1_device1">RAK设备飞碟</string>
    <string name="add_device_step1_device2">RAK设备骑行</string>
    <string name="add_device_step1_title">一键配置</string>
    <string name="add_device_step1_text">一键配置添加RAK设备</string>
    <string name="add_device_step1_note">1、打开RAK设备静候30秒，等待设备初始化\n2、填写当前手机连接的Wi-Fi网络密码\n3、点击\"下一步\"配置设备连接到该网络</string>
    <string name="add_device_step1_wifi">Wi-Fi网络：</string>
    <string name="add_device_step1_psk">Wi-Fi密码：</string>
    <string name="add_device_step1_wifi_hint">请输入名称</string>
    <string name="add_device_step1_psk_hint">请输入密码</string>
    <string name="add_device_step1_ssid_error">SSID不可用</string>
    <string name="add_device_step1_net_error">未连接Wi-Fi</string>
    <string name="add_device_next">下一步</string>
    <string name="add_device_step2_note">1、轻按设备旁Easyconfig按键1秒钟\n2、点击\"下一步\"开始配置</string>
    <string name="add_device_step3_text">很快就连接上了，请稍等...</string>
    <string name="add_device_failed">亲，您的网络不给力...\n返回重新配置或点下面按钮进入AP配置</string>
    <string name="add_device_failed_ap">进入AP配置</string>
    <string name="add_device_failed1">亲，网络密码错误...\n点击返回重新试试看</string>
    <string name="add_device_failed2">亲，配置不成功...\n点击返回重新试试看</string>
    <string name="add_device_failed3">亲，配置失败，未找到RAK设备...\n点击返回重新试试看</string>
    <string name="add_device_success_title">配置我的RAK设备</string>
    <string name="add_device_success_name_hint">给我的RAK设备取个名字</string>
    <string name="add_device_success_psk_hint">输入密码</string>
    <string name="add_device_success_confirm_hint">确认密码</string>
    <string name="add_device_success">完成配置</string>
    <string name="add_device_success_name_error">亲，RAK设备名称不能为空哟</string>
    <string name="add_device_success_psk_error">亲，RAK设备密码不能为空哟</string>
    <string name="add_device_success_confirm_error">亲，确认密码不能为空哟</string>
    <string name="add_device_success_psk_different">亲，两次密码输入不一致哟</string>
    <string name="add_device_success_show">恭喜！您已成功添加RAK设备，赶紧去体验吧</string>
    <string name="add_device_failed_show">啊哦，添加RAK设备失败，密码错了哟</string>
    <string name="modify_device_success_psk_error">亲，密码错了哟，再想想</string>
    <string name="modify_device_success_name">亲，您的RAK设备新名字为：</string>
    <string name="modify_device_success_delete">亲，虽然您已无情删除了RAK设备</string>
    <string name="modify_device_delete_title">删除RAK设备</string>
    <string name="modify_device_delete_text">您确定要狠心删除RAK设备么？</string>
    <string name="modify_device_delete_ok">确定</string>
    <string name="modify_device_delete_cancel">取消</string>
    <string name="add_device_list_name">添加设备</string>
    <string name="device_connect_network_error">亲，连接失败，检查网络连接及RAK设备是否在线</string>
    <string name="device_connect_psk_empty">亲，连接密码不能为空哟</string>
    <string name="device_connect_psk_check_title">校验密码</string>
    <string name="device_connect_psk_check">正在校验RAK设备密码...</string>
    <string name="video_name">Name:</string>
    <string name="video_auto">自动</string>
    <string name="video_VHD">超清</string>
    <string name="video_HD">高清</string>
    <string name="video_BD">标清</string>
    <string name="video_VHD_ok">亲，已经是超清了哟</string>
    <string name="video_HD_ok">亲，已经是高清了哟</string>
    <string name="video_BD_ok">亲，已经是标清了哟</string>
    <string name="video_settings_psk_hint">输入原密码</string>
    <string name="video_settings_confirm_psk_hint">输入新密码</string>
    <string name="video_settings_btn">确认修改</string>
    <string name="video_set_sd_time_error">啊哦，未能同步SD卡录像时间</string>
    <string name="video_take_photo_text">照片保存至：</string>
    <string name="video_record_text">视频保存至：</string>
    <string name="video_settings_psk_text">亲，原密码不能为空哟</string>
    <string name="video_settings_new_psk_text">亲，新密码不能为空哟</string>
    <string name="video_settings_new_psk_error">亲，修改密码失败，再试一把</string>
    <string name="video_settings_new_psk_success">亲，修改密码成功，记住RAK设备新密码哟</string>
    <string name="device_connect_back_title">连接RAK设备</string>
    <string name="device_connect_psk_hint">默认密码\'admin\'</string>
    <string name="device_connect_psk">密码: </string>
    <string name="device_connect_btn">连接</string>
    <string name="device_connect_forget_psk">忘记密码? </string>
    <string name="device_connect_one_screen">单屏显示</string>
    <string name="device_connect_two_screen">分屏显示</string>
    <string name="device_connect_forget_psk_indicator">请长按RAK设备上的\"Easyconfig\"按键5秒，恢复出厂设置(出厂默认为admin) </string>
    <string name="device_connectting_text">正在加载中，很快就连接上了...</string>
    <string name="device_modify_title">修改我的RAK设备</string>
    <string name="device_modify_name_hint">输入RAK设备的新名字</string>
    <string name="device_modify_psk_hint">输入密码</string>
    <string name="device_modify_btn">确认修改</string>
    <string name="device_modify_indicator_title">修改密码</string>
    <string name="device_modify_indicator_text">正在修改密码...</string>
    <string name="device_modify_copy_text">复制RAK设备ID</string>
    <string name="device_modify_copy_text_success">RAK设备ID已复制到剪贴板</string>
    <string name="device_modify_id_text">RAK设备的ID</string>
    <string name="device_delete_btn">删除设备</string>
    <string name="device_connect_failed_text">亲，连接失败了哟~~~\n点击返回重新试试看</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="help_title">使用帮助</string>
    <string name="help_url_android">http://www.pgyer.com/rakvideotest</string>
    <string name="help_url_ios">http://www.pgyer.com/rakvideotest-ios</string>
    <string name="help_text_0">通过网页下载安装手机APP,安卓APP下载链接:</string>
    <string name="help_text_1">苹果APP下载链接:</string>
    <string name="help_text_2">本产品工作模式有二种:\n1. 直连热点模式\n2. 配置局域网路由模式\n设备开机需要30秒的运行时间，工作指示灯闪烁，请耐心等待。\n(特别注意:本机器第一次使用，需要恢复出厂，否则找不到热点，长按“Easyconfig”键5秒由网络路由切换热点。)</string>
    <string name="help_text_3_title">一、直连热点模式</string>
    <string name="help_text_3_text">1. 开机等待启动完毕，打开手机WiFi会扫描到LTH-******字样热点，点击连接。\n2. 打开手机APP，播放列表自动有刚才连接的监控机器，点击并输入密码开始观看；\n3. 第一次点击播放观看，需要输入密码验证，以后就记住密码直接打开OK。\n注（默认密码是admin,打开监控里面可以修改密码，忘记密码长按“Easyconfig”键5秒恢复默认）</string>
    <string name="help_text_4_title">二、配置局域网路由模式</string>
    <string name="help_text_4_text">1. 开机等待启动完毕，确保手机连接WiFi路由器，然后打开手机APP开始配置。\n2. 点击添加，然后填写手机连接WiFi的网络密码，点击“下一步”。\n3. 出现提示轻按”Easyconfig”键，轻按”Easyconfig”键后就点击“下一步”进行配置。\n4. 配置成功后，出现给设备添加你喜欢的名字，点击完成。\n5. 第一次点击播放观看，需要输入密码验证，以后就记住密码直接打开OK。\n注（默认密码是admin,打开监控里面可以修改密码，忘记密码长按“Easyconfig”键5秒恢复默认）</string>
    <string name="help_text_end">郑重声明：为了个人隐私，请修改密码更安全，请务必遵守当地法律，妥当使用本产品！</string>
    <string name="device_media_title">照片和视频</string>
    <string name="device_photo_text">照片</string>
    <string name="device_photo_note">查看已拍下的照片</string>
    <string name="device_video_text">视频</string>
    <string name="device_video_note">查看已录制好的视频</string>
    <string name="photo_text">照片</string>
    <string name="video_text">视频</string>
    <string name="edit_text">编辑</string>
    <string name="delete_text">删除</string>
    <string name="delete_photo_title_note">删除照片</string>
    <string name="delete_video_title_note">删除视频</string>
    <string name="delete_photo_admin_note">确定要删除这些照片吗?</string>
    <string name="delete_video_admin_note">确定要删除这些视频吗?</string>
    <string name="video_uart_recv_hint">接收数据区</string>
    <string name="video_uart_send_hint">发送数据区</string>
    <string name="video_uart_send_btn">发送</string>
    <string name="video_uart_clear_btn">清除</string>
    <string name="video_uart_ip_error">IP地址错误</string>
    <string name="video_uart_connect_success">Socket连接成功</string>
    <string name="video_uart_connect_failed">Socket连接异常</string>
    <string name="video_uart_recv_num">已接收字节数：</string>
    <string name="video_uart_send_num">已发送字节数：</string>
    <string name="permission_title_note">没有权限</string>
    <string name="permission_admin_note">请确认该应用是否已开启读写SD卡的权限.</string>
    <string name="folder_title">文件夹列表</string>
    <string name="get_folder_list">正在获取视频文件夹列表...</string>
    <string name="video_title">回放视频列表</string>
    <string name="get_video_list">正在获取回放视频列表...</string>
    <string name="decoder">解码:</string>
    <string name="decoder_way">选择解码方式</string>
    <string name="hardware_decoder">硬件解码(SurfaceView)</string>
    <string name="software_decoder_s">软件解码(SurfaceView)</string>
    <string name="software_decoder_t">软件解码(TextureView)</string>
    <string name="version">版本信息</string>
    <string name="set_psk">密码修改</string>
    <string name="set_parameter">参数设置</string>
    <string name="app_version">APP 版本号：</string>
    <string name="fw_version">固件版本号：</string>
    <string name="set_video_pipe">分辨率：</string>
    <string name="set_video_fps">帧率：</string>
    <string name="set_video_quality">质量：</string>
    <string name="set_video_gop">GOP：</string>
    <string name="choose_video_pipe">选择分辨率</string>
    <string name="device_parameter_vhd">1920X1080</string>
    <string name="device_parameter_hd">1280X720</string>
    <string name="device_parameter_vga">640X480</string>
    <string name="device_parameter_l">320X240</string>
    <string name="set_video_fps_empty">帧率不能为空</string>
</resources>