<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/add_background"
    >
    <LinearLayout
    android:id="@+id/device_heip_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.example.jean.component.MainMenuButton
            android:padding="15dp"
            android:id="@+id/device_help_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/add_title_height"
            android:textColor="@color/add_title"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/help_title"/>
        <com.example.jean.component.MainMenuButton
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/back"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/add_note_height"
        android:text="@string/help_text_0"
        android:lineSpacingExtra="8dp"
        android:textColor="@color/greys"/>
        <TextView
            android:id="@+id/help_url_android"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="8dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/add_note_height"
            android:text="@string/help_url_android"
            android:background="@drawable/selector"
            android:textColor="@color/blue"/>

    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/add_note_height"
        android:text="@string/help_text_1"
        android:lineSpacingExtra="8dp"
        android:textColor="@color/greys"/>

        <TextView
            android:id="@+id/help_url_ios"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="8dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/add_note_height"
            android:background="@drawable/selector"
            android:text="@string/help_url_ios"
            android:textColor="@color/blue"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/add_note_height"
            android:text="@string/help_text_2"
            android:lineSpacingExtra="8dp"
            android:textColor="@color/greys"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_title_height"
            android:text="@string/help_text_3_title"
            android:lineSpacingExtra="8dp"
            android:textColor="@color/greys"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_height"
            android:text="@string/help_text_3_text"
            android:lineSpacingExtra="8dp"
            android:textColor="@color/greys"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_title_height"
            android:text="@string/help_text_4_title"
            android:lineSpacingExtra="8dp"
            android:textColor="@color/greys"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_height"
            android:text="@string/help_text_4_text"
            android:lineSpacingExtra="8dp"
            android:textColor="@color/greys"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_title_height"
            android:text="@string/help_text_end"
            android:lineSpacingExtra="8dp"
            android:textColor="@color/red"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
