<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:id="@+id/device_parameter_admin1"
    android:gravity="center_horizontal"
    android:background="@color/white"
    >
    <TextView
        android:id="@+id/device_parameter_admin_title"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:paddingLeft="10dp"
	    android:paddingTop="15dp"
	    android:paddingBottom="15dp"
	    android:textColor="@color/dialog_blue"
        android:text="@string/choose_video_pipe"
	    />
    <View
         android:layout_width="fill_parent"
         android:layout_height="@dimen/two_divider_height"
         android:background="@color/dialog_blue"
         />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/device_parameter_vhd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:text="@string/device_parameter_vhd"
            android:background="@drawable/selector"
            />

        <TextView
            android:id="@+id/device_parameter_hd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:text="@string/device_parameter_hd"
            android:background="@drawable/selector"
            />

        <TextView
            android:id="@+id/device_parameter_vga"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:text="@string/device_parameter_vga"
            android:background="@drawable/selector"
            />

        <TextView
            android:id="@+id/device_parameter_l"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:text="@string/device_parameter_l"
            android:background="@drawable/selector"
            />
    </LinearLayout>
</LinearLayout>