<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.example.jean.component.MainMenuButton
            android:padding="15dp"
            android:id="@+id/add_device_step1_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/add_title_height"
            android:textColor="@color/add_title"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/add_device_step1_title"/>
        <com.example.jean.component.MainMenuButton
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/back"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/add_text_height"
        android:text="@string/add_device_step1_text"
        android:textColor="@color/add_text"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/add_note_height"
        android:text="@string/add_device_step1_note"
        android:lineSpacingExtra="8dp"
        android:textColor="@color/add_note"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/add_background"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/add_title_height"
                android:textColor="@color/add_text"
                android:text="@string/add_device_step1_wifi"
                />

            <EditText
                android:id="@+id/add_device_step1_ssid"
                android:layout_width="fill_parent"
                android:textSize="@dimen/add_title_height"
                android:textColor="@color/add_text"
                android:hint="@string/add_device_step1_wifi_hint"
                android:background="@null"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/add_title_height"
                android:textColor="@color/grey"
                android:text="@string/add_device_step1_psk"
                />

            <EditText
                android:id="@+id/add_device_step1_psk"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/add_device_step1_psk_hint"
                android:textSize="@dimen/add_title_height"
                android:textColor="@color/grey"
                android:inputType="textPassword"
                android:background="@null"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/add_device_step1_showpsk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/psk_close"
                />
        </LinearLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/one_divider_height"
            android:background="@color/add_line"/>
    </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/add_device_step1_next"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/add_device_next"
        android:textSize="@dimen/add_title_height"
        android:textColor="@color/white"
        android:background="@drawable/add_selector"
        />

    <LinearLayout
        android:id="@+id/add_device_step1_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_device_step1_next"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/rect_gray"
        android:visibility="gone"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/add_device_step1_device2"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="@dimen/add_title_height"
            android:textColor="@color/grey"
            android:text="@string/add_device_step1_device2"
            />
        <ImageView
            android:id="@+id/add_device_step1_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/up"/>
    </LinearLayout>

    <TextView
        android:layout_above="@id/add_device_step1_devices"
        android:id="@+id/add_device_step1_device1"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="@dimen/add_title_height"
        android:textColor="@color/grey"
        android:text="@string/add_device_step1_device1"
        android:visibility="gone"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/rect_dash_gray"
        />

</RelativeLayout>
